Finish with menu selection 5. Do not finish with file of Employee and Management

--- a/Project/CMakeLists.txt
+++ b/Project/CMakeLists.txt
@@ -11,4 +11,5 @@ add_executable(Project main.cpp
         Management.cpp
         Menu.cpp
         Product.cpp
-        ProductHandler.cpp)
+        ProductHandler.cpp
+)
