Finish with everything. Begin to test and do the powerpoint

--- a/Project/CMakeLists.txt
+++ b/Project/CMakeLists.txt
@@ -13,4 +13,5 @@ add_executable(Project main.cpp
         Product.cpp
         ProductHandler.cpp
         Management.h
+        FuntionToEditInformation.h
 )
